2001-06-25  Rich Churcher  <churcher@ihug.com.au>
	* Added link to c++features.html

--- a/htdocs/gcc-3.0/features.html
+++ b/htdocs/gcc-3.0/features.html
@@ -39,8 +39,10 @@
         GCJ can compile Java source or Java bytecodes to either native code
         or Java class files, and supports native methods written in either
         the standard JNI or the more efficient and convenient CNI.</li>
-    <!-- See also gcc/cp/NEWS; include a copy of the relevant parts as
-         c++features.html.  -->
+    <li>Here is a <a href="c++features.html">partial list of C++
+        improvements</a>, both new features and those no longer
+        supported.</li>
+
     <li>New C++ ABI. On the IA-64 platform GCC is capable of
         inter-operating with other IA-64 compilers.</li> 
     <li>The new ABI also significantly reduces the size of symbol and debug
