Document that anyone may create branches.

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -20,6 +20,7 @@ significant developers. Maintainers are also encouraged to edit the
   <li><a href="#policies">Write access policies</a></li>
   <li><a href="#checkin">Checking in a change</a></li>
   <li><a href="#example">Example check-in session</a></li>
+  <li><a href="#branches">Creating branches</a></li>
 </ol>
 
 <hr>
@@ -123,6 +124,12 @@ href="http://gcc.gnu.org/ml/gcc-cvs/">gcc-cvs</a> list.</p>
 the tree from their official versions without explicit write approval.   
 Such files would include <code>config.guess</code> and 
 <code>config.sub</code>.</p>
+
+<p>Any maintainer with CVS write access may <a href="#branches">create
+and use a branch</a> for development, including outside the parts of
+the compiler they maintain, provided that changes on the branch have
+copyright assignments on file.  Merging such developments back to the
+mainline still needs approval in the usual way.</p>
 
 <hr>
 <h2><a name="checkin">Checking in a change</a></h2>
@@ -391,6 +398,12 @@ that may effect multiple files.  If you have several unrelated changes,
 you should check them in with separate cvs commit commands.</p>
 
 <p>And that's it!</p>
+
+<hr>
+<h2><a name="branches">Creating branches</a></h2>
+
+<p>When creating a branch for development, you should first tag the
+branchpoint.</p>
 
 </body>
 </html>
