Add a note on using current version of GDB to debug C++ code. Based on a patch by <johnston@vectaport.com>.

--- a/htdocs/gcc-3.0/caveats.html
+++ b/htdocs/gcc-3.0/caveats.html
@@ -35,9 +35,14 @@
   libstdc++ are not included in libstdc++ v3, i.e.  filebuf::attach,
   ostream::form, and istream::gets. Here are workaround hints for:
   <a href="http://gcc.gnu.org/onlinedocs/libstdc++/21_strings/howto.html">ostream::form</a>,
-  <a href="http://gcc.gnu.org/onlinedocs/libstdc++/ext/howto.html">filebuf::at
-tach</a>.</li>
+  <a href="http://gcc.gnu.org/onlinedocs/libstdc++/ext/howto.html">filebuf::attach</a>.</li>
 
+  <li>The new C++ ABI is not yet fully supported by current (as of
+  2001-07-01) releases and development versions of GDB, or any earlier
+  versions.  There is a problem setting breakpoints by line number, and
+  other related issues that have been fixed in GCC 3.0 but not yet handled
+  in GDB:
+  <a href="http://gcc.gnu.org/ml/gcc-bugs/2001-06/msg00421.html">http://gcc.gnu.org/ml/gcc-bugs/2001-06/msg00421.html</a></li>
 </ul>
 
 </body>
