Provide notes on how to obtain GCC.

--- a/htdocs/gcc-3.0/gcc-3.0.html
+++ b/htdocs/gcc-3.0/gcc-3.0.html
@@ -33,5 +33,9 @@ is what makes GCC successful.</p>
 <a href="../index.html">GCC project web site</a> or contact the
 <a href="mailto:gcc@gcc.gnu.org">GCC development mailing list</a>.</p>
 
+<p>To obtain GCC please use <a href="../mirrors.html">our mirror sites</a>,
+one of the <a href="http://www.gnu.org/order/ftp.html">GNU mirror sites</a>,
+or <a href="../cvs.html">our CVS server</a>.</p>
+
 </body>
 </html>
