--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -15,6 +15,11 @@
 </tr>
 
 <tr>
+<td>i586-pc-cygwin</td>
+<td>Successful</td>
+</tr>
+
+<tr>
 <td>i686-pc-linux-gnu</td>
 <td>Successful</td>
 </tr>
