--- a/htdocs/extensions.html
+++ b/htdocs/extensions.html
@@ -118,5 +118,10 @@ tools for the TMS340x0</a></h2>
 
 <p>A GCC port to a <EM>bit-addressable</EM> architecture.</p>
 
+<h2><a href="http://www.motorola.com/SPS/DSP/tools/sw-dev.html">Port to
+Motorola 56k DSPs</a>
+
+<p>Customization of GCC 1.x to Motorola's 56k line.</p>
+
 </body>
 </html>
