--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -154,12 +154,12 @@ maintain and improve quality.
 
 <dt><b>June 18, 2001</b></dt>
 <dd>
-<a href="gcc-3.0/gcc-3.0.html">gcc-3.0</a> has been released.
+<a href="gcc-3.0/gcc-3.0.html">GCC 3.0</a> has been released.
 </dd>
 
 <dt><b>March 16, 2001</b></dt>
 <dd>
-<a href="gcc-2.95/gcc-2.95.3.html">gcc-2.95.3</a> has been released.
+<a href="gcc-2.95/gcc-2.95.3.html">GCC 2.95.3</a> has been released.
 </dd>
 
 <dt><b>February 12, 2001</b></dt>
