--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -15,6 +15,11 @@
 </tr>
 
 <tr>
+<td>i386-pc-solaris2.8</td>
+<td>Successful</td>
+</tr>
+
+<tr>
 <td>i386-unknown-freebsd4.3</td>
 <td>Successful</td>
 </tr>
