--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -10,6 +10,11 @@
 <table>
 
 <tr>
+<td>hppa2.0-hp-hpux10.20</td>
+<td>Successful</td>
+</tr>
+
+<tr>
 <td>i386-pc-sco3.2v5.0.4</td>
 <td>Successful</td>
 </tr>
