--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -15,6 +15,11 @@
 </tr>
 
 <tr>
+<td>alphaev67-dec-osf5.1</td>
+<td>Successful</td>
+</tr>
+
+<tr>
 <td>hppa2.0-hp-hpux10.20</td>
 <td>Successful</td>
 </tr>
