--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -115,12 +115,13 @@
 
 <h2><a name="msgsize">Policies</a></h2>
 
-<p>All the lists have a maximum message size.  If your message exceeds
-more than 100kbytes, you should compress any attachments before sending
-it to the list.
+<p>Our lists have a maximum message size of 100KB, only the gcc-prs list
+allows for a larger maximum message size of 2MB.  If your message exceeds
+this size, you should compress any attachments before sending it to the list.
+</p>
 
 <p>When posting messages, please select an appropriate list for the message
-and try to avoid cross posting a message to several lists.
+and try to avoid cross posting a message to several lists.</p>
 
 <p>Please refrain from sending messages in HTML, RTF or similar formats.</p>
 
