Add tags for automated update.

--- a/htdocs/search.html
+++ b/htdocs/search.html
@@ -116,10 +116,8 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 </th>
 </tr>
 <tr align=left>
-<!-- FIXME: Best would be to have a newmonthsgohere machinery here, but
-     this page is checked into CVS, which adds a level of complexity that
-     is not currently handled well.  -->
 <td><select name=restrict multiple size=6>
+<!-- @UPDATE-MONTHLY@ @lt@option value=@qq@gcc/@%Y@-@%m@@qq@@gt@@%b@ @%Y@ -->
 <option value="gcc/2001-06">Jun 2001
 <option value="gcc/2001-05">May 2001
 <option value="gcc/2001-04">Apr 2001
@@ -168,6 +166,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc/1997-09">Sep 1997
 </select></td>
 <td><select name=restrict multiple size=6>
+<!-- @UPDATE-MONTHLY@ @lt@option value=@qq@gcc-bugs/@%Y@-@%m@@qq@@gt@@%b@ @%Y@ -->
 <option value="gcc-bugs/2001-06">Jun 2001
 <option value="gcc-bugs/2001-05">May 2001
 <option value="gcc-bugs/2001-04">Apr 2001
@@ -216,6 +215,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-bugs/1997-09">Sep 1997
 </select></td>
 <td><select name=restrict multiple size=6>
+<!-- @UPDATE-MONTHLY@ @lt@option value=@qq@gcc-patches/@%Y@-@%m@@qq@@gt@@%b@ @%Y@ -->
 <option value="gcc-patches/2001-06">Jun 2001
 <option value="gcc-patches/2001-05">May 2001
 <option value="gcc-patches/2001-04">Apr 2001
@@ -256,6 +256,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-patches/1998-05">May 1998
 </select></td>
 <td><select name=restrict multiple size=6>
+<!-- @UPDATE-MONTHLY@ @lt@option value=@qq@gcc-help/@%Y@-@%m@@qq@@gt@@%b@ @%Y@ -->
 <option value="gcc-help/2001-06">Jun 2001
 <option value="gcc-help/2001-05">May 2001
 <option value="gcc-help/2001-04">Apr 2001
@@ -281,6 +282,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-help/1999-q3">Jul-Sep 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<!-- @UPDATE-MONTHLY@ @lt@option value=@qq@gcc-cvs/@%Y@-@%m@@qq@@gt@@%b@ @%Y@ -->
 <option value="gcc-cvs/2001-06">Jun 2001
 <option value="gcc-cvs/2001-05">May 2001
 <option value="gcc-cvs/2001-04">Apr 2001
@@ -321,6 +323,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-cvs/1998-05">May 1998
 </select></td>
 <td><select name=restrict multiple size=6>
+<!-- @UPDATE-MONTHLY@ @lt@option value=@qq@gcc-testresults/@%Y@-@%m@@qq@@gt@@%b@ @%Y@ -->
 <option value="gcc-testresults/2001-06">Jun 2001
 <option value="gcc-testresults/2001-05">May 2001
 <option value="gcc-testresults/2001-04">Apr 2001
@@ -374,6 +377,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 </tr>
 <tr align=left>
 <td><select name=restrict multiple size=6>
+<!-- @UPDATE-MONTHLY@ @lt@option value=@qq@gcc-regression/@%Y@-@%m@@qq@@gt@@%b@ @%Y@ -->
 <option value="gcc-regression/2001-06">Jun 2001
 <option value="gcc-regression/2001-05">May 2001
 <option value="gcc-regression/2001-04">Apr 2001
@@ -390,6 +394,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-regression/2000-05">May 2000
 </select></td>
 <td><select name=restrict multiple size=6>
+<!-- @UPDATE-QUARTERLY@ @lt@option value=@qq@gcc-prs/@%Y@-q@Q@@qq@@gt@@Q-M@ @%Y@ -->
 <option value="gcc-prs/2001-q2">Apr-Jun 2001
 <option value="gcc-prs/2001-q1">Jan-Mar 2001
 <option value="gcc-prs/2000-q4">Oct-Dec 2000
@@ -402,12 +407,14 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-prs/1999-q1">Jan-Mar 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<!-- @UPDATE-YEARLY@ @lt@option value=@qq@gcc-announce/@%Y@@qq@@gt@@%Y@ -->
 <option value="gcc-announce/2001">2001
 <option value="gcc-announce/2000">2000
 <option value="gcc-announce/1999">1999
 <option value="gcc-announce/1997-1998">1997-8
 </select></td>
 <td><select name=restrict multiple size=6>
+<!-- @UPDATE-YEARLY@ @lt@option value=@qq@gcc-cvs-wwwdocs/@%Y@@qq@@gt@@%Y@ -->
 <option value="gcc-cvs-wwwdocs/2001">2000
 <option value="gcc-cvs-wwwdocs/2000">2000
 <option value="gcc-cvs-wwwdocs/1999">1999
@@ -430,6 +437,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 </tr>
 <tr align=left>
 <td><select name=restrict multiple size=6>
+<!-- @UPDATE-MONTHLY@ @lt@option value=@qq@libstdc++/@%Y@-@%m@@qq@@gt@@%b@ @%Y@ -->
 <option value="libstdc++/2001-06">Jun 2001
 <option value="libstdc++/2001-05">May 2001
 <option value="libstdc++/2001-04">Apr 2001
@@ -450,6 +458,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="libstdc++/1999-q1">Jan-Mar 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<!-- @UPDATE-QUARTERLY@ @lt@option value=@qq@libstdc++-cvs/@%Y@-q@Q@@qq@@gt@@Q-M@ @%Y@ -->
 <option value="libstdc++-cvs/2001-q2">Apr-Jun 2001
 <option value="libstdc++-cvs/2001-q1">Jan-Mar 2001
 <option value="libstdc++-cvs/2000-q4">Oct-Dec 2000
@@ -460,6 +469,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="libstdc++-cvs/1999-q3">Jul-Sep 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<!-- @UPDATE-QUARTERLY@ @lt@option value=@qq@libstdc++-prs/@%Y@-q@Q@@qq@@gt@@Q-M@ @%Y@ -->
 <option value="libstdc++-prs/2001-q2">Apr-Jun 2001
 <option value="libstdc++-prs/2001-q1">Jan-Mar 2001
 <option value="libstdc++-prs/2000-q4">Oct-Dec 2000
@@ -491,6 +501,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 </tr>
 <tr align=left>
 <td><select name=restrict multiple size=6>
+<!-- @UPDATE-MONTHLY@ @lt@option value=@qq@java/@%Y@-@%m@@qq@@gt@@%b@ @%Y@ -->
 <option value="java/2001-06">Jun 2001
 <option value="java/2001-05">May 2001
 <option value="java/2001-04">Apr 2001
@@ -517,6 +528,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="java/1998-09">Sep 1998
 </select></td>
 <td><select name=restrict multiple size=6>
+<!-- @UPDATE-QUARTERLY@ @lt@option value=@qq@java-patches/@%Y@-q@Q@@qq@@gt@@Q-M@ @%Y@ -->
 <option value="java-patches/2001-q2">Apr-Jun 2001
 <option value="java-patches/2001-q1">Jan-Mar 2001
 <option value="java-patches/2000-q4">Oct-Dec 2000
@@ -528,6 +540,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="java-patches/1999-q2">Apr-Jun 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<!-- @UPDATE-QUARTERLY@ @lt@option value=@qq@java-prs/@%Y@-q@Q@@qq@@gt@@Q-M@ @%Y@ -->
 <option value="java-prs/2001-q2">Apr-Jun 2001
 <option value="java-prs/2001-q1">Jan-Mar 2001
 <option value="java-prs/2000-q4">Oct-Dec 2000
@@ -538,6 +551,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="java-prs/1999-q3">Jul-Sep 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<!-- @UPDATE-YEARLY@ @lt@option value=@qq@java-announce/@%Y@@qq@@gt@@%Y@ -->
 <option value="java-announce/2001">2001
 <option value="java-announce/2000">2000
 <option value="java-announce/1999">1999
