Add section with cvs and cvsweb location of system setup.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -141,7 +141,17 @@ you may want to check out include:
 <p>The web pages for the GCC project are also in the CVS repository
 and you can check them out, submit patches, etc just like you do for
 the compiler itself.  Use <code>cvs co wwwdocs</code> to check out
-the web pages.
+the web pages.</p>
+
+<h2><a name="system">The host system</a></h2>
+
+<p>The setup of the machine running the gcc.gnu.org site is also
+available, through
+<a href="http://sources.redhat.com/cgi-bin/cvsweb.cgi/?cvsroot=sourceware">
+cvsweb</a> and anonymous read-only CVS.  Use the same procedure
+as above, but replace the repository bits with
+<code>:pserver:anoncvs@gcc.gnu.org:/cvs/sourceware</code> and
+<code>infra</code>.</p>
 
 </body>
 </html>
