--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -421,6 +421,9 @@ tahoe. These are listed here just for completeness.
 
   <li><a href="http://www.arm.com/armwww.ns4/img/12-Technical+Specs-ARM+ELF+Specification+PDF/$File/ARMELFA08.pdf">ARM ELF ABI</a>
 
+  <li><a href="http://www.eagercon.com/dwarf/dwarf2std.htm">DWARF 2.1
+  drafts</a></li>
+
   <li><a href="ftp://sgigate.sgi.com/pub/dwarf/">DWARF v2 spec and sample implementation</a>
 
   <li><a href="http://reality.sgi.com/davea/objectinfo.html">Debugging/object info</a> by David B.Anderson (including links to some DWARF tools)
