2001-07-11  Alexandre Petit-Bianco  <apbianco@redhat.com>
        * faq.html (1.1): Fixed typo.

(http://gcc.gnu.org/ml/gcc/2001-07/msg00958.html )

--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -94,7 +94,7 @@
         <p> 
         <dd>
           libgcj is distributed under the GPL, with the 'libgcc exception'.
-          This means that if linking with libgcj does not by itself cause
+          This means that linking with libgcj does not by itself cause
           your program to fall under the GPL.  See LIBGCJ_LICENSE in
           the source tree for more details.
         </dd>
