--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -65,7 +65,17 @@
 </tr>
 
 <tr>
+<td>mips-sgi-irix6.5</td>
+<td>Successful</td>
+</tr>
+
+<tr>
 <td>powerpc-unknown-linux-gnu</td>
+<td>Successful</td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.7</td>
 <td>Successful</td>
 </tr>
 
