--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -136,7 +136,9 @@ GNU/Linux) and cross targets and use an extensive
 <a href="http://gcc.gnu.org/testresults/">test suite</a> as well as a
 <a href="http://gcc.gnu.org/benchresults/">benchmark suite</a> to
 maintain and improve quality.
-<a href="gcc-3.0/gcc-3.0.html">GCC 3.0</a> is the current release.
+<a href="gcc-3.0/gcc-3.0.html">GCC 3.0</a> is the current release,
+<a href="http://gcc.gnu.org/ml/gcc/2001-06/msg01382.html">GCC 3.0.1 is
+scheduled for early August</a>.
 </p>
 
 <hr>
