* contrib.html: The project is called GCC, not gcc. Fix two 	broken links by making them relative.

--- a/htdocs/java/contrib.html
+++ b/htdocs/java/contrib.html
@@ -70,7 +70,7 @@ projects</a>.
 
   <p>Before we can accept code contributions from you, we need a
   copyright assignment form filled out.  See <a
-  href="/contribute.html">the gcc contribute page</a>for information
+  href="../contribute.html">the GCC contribute page</a>for information
   on how to do this.</p>
 
 <table border="0" cellpadding="4" width="95%">
@@ -105,7 +105,7 @@ projects</a>.
     <p>Patches to the gcj front end -- the <tt>gcc/java</tt> directory --
        should be sent to <a href="mailto:gcc-patches@gcc.gnu.org">the gcc
        patch mailing list</a>.  See <a
-       href="http://gcc.gnu.org/contribute.html">the gcc contribution
+       href="../contribute.html">the GCC contribution
        instructions</a> for more information.
 
   <p>
