--- a/htdocs/gcc-3.0/c++features.html
+++ b/htdocs/gcc-3.0/c++features.html
@@ -15,7 +15,7 @@
   <li>G++ now enforces access control for nested types.</li>
   <li>In some obscure cases, functions with the same type could have
       the same mangled name.  This bug caused compiler crashes,
-      link-time clashes, and debugger crahses.  Fixing this bug
+      link-time clashes, and debugger crashes.  Fixing this bug
       required breaking ABI compatibility for the functions involved.
       The functions in questions are those whose types involve
       non-type template arguments whose mangled representations
