Some information on ssa-ccp optimization pass.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -153,6 +153,12 @@ scheduled for early August</a>.
 <h2>News/Announcements</h2>
 
 <dl>
+<dt><b>July 9, 2001</b></dt>
+<dd>
+Daniel Berlin and Jeff Law have contributed a
+<a href="news/ssa-ccp.html">Sparse Conditional Constant Propagation</a> 
+optimization pass.
+</dd>
 
 <dt><b>June 18, 2001</b></dt>
 <dd>
