Announce the new development plan.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -153,6 +153,14 @@ scheduled for early August</a>.
 <h2>News/Announcements</h2>
 
 <dl>
+
+<dt><b>July 17, 2001</b></dt>
+<dd>
+The <a href="steering.html">Steering Committee</a> adopted a
+<a href="develop.html">new development plan</a> which we will
+start using for GCC 3.1, scheduled for April 15, 2002.
+</dd>
+
 <dt><b>July 9, 2001</b></dt>
 <dd>
 Daniel Berlin and Jeff Law have contributed a
