Another markup issue.

--- a/htdocs/develop.html
+++ b/htdocs/develop.html
@@ -215,11 +215,11 @@ spending undue amounts of time on release testing and packaging.</p>
 
 <hr>
 
-<p id="1">Note that no distinction is made between patches which are
+<p id="1">[1] Note that no distinction is made between patches which are
 themselves buggy and patches which expose "latent" bugs elsewhere in
 the compiler.</p>
 
-<p id="2">The Steering Committee is planning to prepare a list of such
+<p id="2">[2] The Steering Committee is planning to prepare a list of such
 targets.  The list will be revised at the beginning of each release
 cycle, if necessary.</p>
 
