Add IA-64 performance projects. By Janis Johnson <janis@us.ibm.com>.

--- a/htdocs/projects/index.html
+++ b/htdocs/projects/index.html
@@ -21,6 +21,7 @@
 <li><a href="#automaton_based_pipeline_hazard_recognizer">Automaton based pipeline hazard recognizer</a>
 </ul>
 <li><a href="#optimizer_inadequacies">Optimizer inadequacies</a>
+<li><a href="#ia64 projects">Projects to improve performance on IA-64</a>
 <li><a href="#changes_to_support_c99_standard">Changes to support C99 standard</a>
 <li><a href="#improve_the_haifa_scheduler">Improve the Haifa scheduler</a>
 <li><a href="#improvements_to_gcse_and_pre">Improvements to global cse and partial redundancy elimination:</a>
@@ -140,6 +141,10 @@ pipelining implementation.</p>
 <p>We also have a page detailing <a href="optimize.html">optimizer
 inadequacies</a>, if you'd prefer to think about it in terms of problems
 instead of features.</p>
+
+<h2><a name="ia64 projects">Projects to improve performance on IA-64</h2>
+<p>There is a separate project list for
+<a href="ia64.html">IA-64 performance improvements</a>.</p>
 
 <h2><a name="changes_to_support_c99_standard">Changes to support C99 standard</h2>
 
