GPL-covered code may not be distributed under an NDA.

--- a/htdocs/contributewhy.html
+++ b/htdocs/contributewhy.html
@@ -129,5 +129,10 @@ your long term maintenance costs and may help raise interest in your
 processor by having a free compiler implementation available to anyone
 who wants to take a look.</P>
 
+<p>Finally, please note that GPL-covered code may <em>not</em> be
+distributed under an NDA,
+<a href="http://gcc.gnu.org/ml/gcc/2001-07/msg01342.html">as explained
+by Richard Stallman</a>.</p>
+
 </BODY>
 </HTML>
