Add ast-optimizer page, and link from index

--- a/htdocs/projects/index.html
+++ b/htdocs/projects/index.html
@@ -19,6 +19,7 @@
 <li><a href="#ssa_conditional_constant_propagation_pass">SSA Conditional Constant Propagation Pass</a>
 <li><a href="#value_range_propagation_pass">Value range propagation pass</a>
 <li><a href="#automaton_based_pipeline_hazard_recognizer">Automaton based pipeline hazard recognizer</a>
+<li><a href="#ast_optimizer">Tree optimization passes</a>
 </ul>
 <li><a href="#optimizer_inadequacies">Optimizer inadequacies</a>
 <li><a href="#ia64 projects">Projects to improve performance on IA-64</a>
@@ -136,7 +137,10 @@ automaton based pipeline hazard recognizer</a>. It enables better
 instruction scheduling and it provides the base for a future sofware
 pipelining implementation.</p>
 
-
+<h3><a name="ast_optimizer">Tree optimization passes</a></h3>
+A separate page describes <a href="ast-optimizer.html">abstract
+syntax tree optimization passes</a> that are being worked on.
+  
 <h2><a name="optimizer_inadequacies">Optimizer inadequacies</h2>
 <p>We also have a page detailing <a href="optimize.html">optimizer
 inadequacies</a>, if you'd prefer to think about it in terms of problems
