Fix html formatting

--- a/htdocs/projects/index.html
+++ b/htdocs/projects/index.html
@@ -139,7 +139,7 @@ pipelining implementation.</p>
 
 <h3><a name="ast_optimizer">Tree optimization passes</a></h3>
 A separate page describes <a href="ast-optimizer.html">abstract
-syntax tree optimization passes</a> that are being worked on.
+syntax tree optimization passes</a> that are being worked on.</p>
   
 <h2><a name="optimizer_inadequacies">Optimizer inadequacies</h2>
 <p>We also have a page detailing <a href="optimize.html">optimizer
