--- a/htdocs/projects/index.html
+++ b/htdocs/projects/index.html
@@ -115,9 +115,8 @@ the tag <code>new-regalloc-branch</code>. It is known to bootstrap
 under x86-linux and ppc-linux.</p>
 
 <h3><a name="ssa_for_trees">SSA for trees</h3>
-<p>Diego Novillo is working on implementing
-<a href="http://gcc.gnu.org/ml/gcc-patches/2001-03/msg00565.html">
- SSA analysis for trees</a>.</p>
+<p>Diego Novillo is working on implementing 
+<a href="ast-optimizer.html#ssa_for_trees">SSA analysis for trees</a>.</p>
 
 <h3><a name="ssa_conditional_constant_propagation_pass">SSA Conditional Constant Propagation Pass</h3>
 <p>Daniel Berlin has posted an 80% complete
