--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -134,12 +134,12 @@ href="cvs.html">anonymous CVS</a>.</p>
 <a href="releases.html">releases</a>.
 We want those releases to work well on a variety of native (including
 GNU/Linux) and cross targets and use an extensive
-<a href="http://gcc.gnu.org/testresults/">test suite</a> as well as a
-<a href="http://gcc.gnu.org/benchresults/">benchmark suite</a> to
-maintain and improve quality.
+<a href="http://gcc.gnu.org/testresults/">test suite</a> as well as
+<a href="benchmarks/">various benchmark suites
+and automated testers</a> to maintain and improve quality.
 <a href="gcc-3.0/gcc-3.0.html">GCC 3.0</a> is the current release,
 <a href="http://gcc.gnu.org/ml/gcc/2001-06/msg01382.html">GCC 3.0.1 is
-scheduled for early August</a>.
+scheduled for August</a>.
 </p>
 
 <hr>
