Add a reference to Bench++.

--- a/htdocs/benchmarks/index.html
+++ b/htdocs/benchmarks/index.html
@@ -17,8 +17,8 @@ benchmarks.
 <h2>The GCC Benchmark suite</h2>
 
 <p>
-GCC has also it's own
-<a href="http://gcc.gnu.org/benchresults/">Benchmark suites</a>
+GCC has its own
+<a href="http://gcc.gnu.org/benchresults/">benchmark suite</a>
 which contains a number of smaller tests together with sources and
 results from these runs for different platforms.
 </p>
@@ -27,8 +27,8 @@ results from these runs for different platforms.
 <h2>SPEC 95</h2>
 
 <p>
-Diego Novillo has setup a Pentium III system that runs daily SPEC
-95 tests.  The results can be seen on the page <a
+Diego Novillo has set up a Pentium III system that runs daily SPEC
+95 tests.  The results can be seen at <a
 href="http://www.cygnus.com/~dnovillo/SPEC/">http://www.cygnus.com/~dnovillo/SPEC/</a>.
 </p>
 
@@ -38,6 +38,15 @@ href="http://www.cygnus.com/~dnovillo/SPEC/">http://www.cygnus.com/~dnovillo/SPE
 Similar to Diego's setup, Andreas Jaeger is running SPEC 2000 tests on
 AMD Athlon systems.  For details check <a
 href="http://www.suse.de/~aj/SPEC/">http://www.suse.de/~aj/SPEC/</a>.
+</p>
+
+<h2>Related benchmarks</h2>
+
+<p>
+Charles Leggett runs several benchmarks (Bench++, Haney, Stepanov, OOPACK)
+comparing various versions of GCC and KAI KCC with several optimization
+levels.  Results can be found at <a href="http://annwm.lbl.gov/bench/">
+http://annwm.lbl.gov/bench/</a>.
 </p>
 
 </body>
