Add note on using a simulator and link to simtest-howto.html

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -144,7 +144,9 @@ following:
     good enough to have bootstrapped with an earlier variant.  (Unless
     the only changes from the earlier variant are formatting and
     comment changes; if there are <strong>any</strong> changes to the code
-    itself you should re-bootstrap.)</li>
+    itself you should re-bootstrap.)  It is recommended that you also <a
+    href="simtest-howto.html">use a simulator</a> to increase your test
+    coverage.</li>
 
 <li>If your change is to code that is not in a front-end, or is to   
     the C front-end, verify that the all of the GCC regression tests
