Fix markup problems noticed by the program 'tidy'.

--- a/htdocs/codingconventions.html
+++ b/htdocs/codingconventions.html
@@ -133,7 +133,7 @@ href="http://gcc.gnu.org/ml/gcc-patches/2000-10/msg00792.html">message</a>.</p>
 <p>Some files and packages in the CVS tree are imported from elsewhere,
 and we want to minimize divergence from their upstream sources.  The
 following files should be updated only according to the rules set
-below:</o>
+below:</p>
 
 <ul>
 
