--- a/htdocs/gcc-3.0/c++features.html
+++ b/htdocs/gcc-3.0/c++features.html
@@ -8,7 +8,7 @@
 <h1 align="center">Improved C++ Support in GCC 3.0</h1>
 
 <ul>
- <li>Improvements:</li>
+ <li>Improvements:
  <ul>
   <li>G++ now supports importing member functions from base 
       classes with a using-declaration.</li>
@@ -26,8 +26,9 @@
       cast, whereas previously G++ would sometimes accept the code
       even without the cast.</li>
   </ul>
+  </li>
 
- <li>Removed (no longer supported):</li>
+ <li>Removed (no longer supported):
  <ul>
   <li>Support for guiding declarations has been removed.</li>
   <li>Support for assignment to <code>this</code> has been removed.  This idiom
@@ -47,6 +48,7 @@
       has been deprecated, and will be removed in a future version of
       G++.</li>
  </ul>
+ </li>
 </ul>
 
 </body>
