--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -91,7 +91,7 @@ already built for some systems.  A partial list of these build tools
 is: Autoconf, Bison, Xgettext, Automake, and Gperf.</p>
 
 <hr>
-<h2>Conflicts when using cvs update</a></h2>
+<h2>Conflicts when using <code>cvs update</code></h2>
 
 <p>It is not uncommon to get CVS conflict messages for some generated files
 when updating your local sources from the CVS repository.  Typically such
@@ -99,7 +99,7 @@ conflicts occur with bison or autoconf generated files.</p>
 
 <p>As long as you haven't been making modifications to the generated files
 or the generator files, it is safe to delete the offending file, then run
-cvs update again to get a new copy.</p>
+<code>cvs update</code> again to get a new copy.</p>
 
 
 <h3>CVS tags and checkouts</h3>
