--- a/htdocs/simtest-howto.html
+++ b/htdocs/simtest-howto.html
@@ -76,6 +76,13 @@ make check-gcc RUNTESTFLAGS=--target_board=arm-sim
 </tr>
 
 <tr valign="top">
+ <td>mips-elf</td>
+ <td>mips-sim</td>
+ <td>2001-07-31</td>
+ <td>Many unexpected failures for C++: 119 and Fortran: 398</td>
+</tr>
+
+<tr valign="top">
  <td>mn10300-elf</td>
  <td>mn10300-sim</td>
  <td>2001-07-30</td>
