Fix HTML issues.

--- a/htdocs/java/build-snapshot.html
+++ b/htdocs/java/build-snapshot.html
@@ -9,7 +9,7 @@
 <table border="0" cellpadding="4" width="95%">
         <tr bgcolor="#b0d0ff"> 
           <th align="center"> 
-            <h2>Howto build and run libgcj/gcj snapshots or cvs</a>
+            <h2>Howto build and run libgcj/gcj snapshots or cvs</h2>
           </th>
         </tr>
 
