--- a/htdocs/java/contrib.html
+++ b/htdocs/java/contrib.html
@@ -149,11 +149,11 @@ projects</a>.
       of a doubt, that the bug has been fixed) close the PR.
 
     <p>
-<pr>
+<br>
 <table border="0" cellpadding="4" width="95%">
 <tr bgcolor="#b0d0ff">
  <th align="left">
-  <a name=Testing>Testing
+  <a name=Testing>Testing</a>
  </th>
 </tr>
 </table>
