--- a/htdocs/java/docs.html
+++ b/htdocs/java/docs.html
@@ -72,7 +72,7 @@ conferences and magazines.
        a Java-aware C++ compiler (G++) to write native methods for Gcj.
        <br>The CNI design and ideas were proposed in
        "<cite>Writing native Java methods in natural C++</cite>"
-       (November 1997).
+       (November 1997).</a>
        <p>
 
   <li><b>August 1998</b>: "<cite>No Silver Bullet - Garbage Collection for 
