--- a/htdocs/java/download.html
+++ b/htdocs/java/download.html
@@ -63,15 +63,13 @@ using the development sources and run into such a problem.
 If you are going to build from source you want to read the
 <a href=faq.html#3_0>Build Issues FAQ</a>.
 
-<p>
 <h3>Snapshots</h3>
 Snapshots of the current CVS tree are made about once a week.  They are 
 available from <a href="http://gcc.gnu.org/snapshots.html">
 http://gcc.gnu.org/snapshots.html</a>.
 <p>
 
-<a name=cvs>
-<h3>cvs</h3> 
+<h3><a name=cvs>cvs</a></h3> 
 
 The easiest way to get GCJ is to check it out from the GCC cvs
 repository. Here's how perform an anonymous <A
@@ -108,8 +106,6 @@ Here's the Java front end <a
 href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/java">cvs
 archive</a> (the entire compiler is also 
 <a href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc">available</a>.)
-
-</table>
 
 </GCJNAV>
 
