--- a/htdocs/java/old-news.html
+++ b/htdocs/java/old-news.html
@@ -214,6 +214,7 @@ Today we merged some major work done at Red Hat.  This included:
 <li> A somewhat modified initial implementation of serialization.
      (This is known not to interoperate with other implementations yet.)
 <li> Miscellaneous bug fixes.
+</ul>
 </td></tr>
 
 <tr><td valign="top">
@@ -333,7 +334,7 @@ step towards getting libgcj to run on the IA-64.
 We've done a lot since the previous announcement, but we haven't
 mentioned it here.  Oops!  Here are some of the things we've added:
 complete reflection support, Runtime.loadLibrary,
-Throwable.printStackTrace (this one is <emph>very</emph> cool),
+Throwable.printStackTrace (this one is <em>very</em> cool),
 a Java implementation of java.math.BigInteger, JNI (believed complete
 but still in testing), and, of course, many
 bug fixes and more minor enhancements.
