--- a/htdocs/java/test.html
+++ b/htdocs/java/test.html
@@ -25,7 +25,7 @@ when the tests are being run.<p>
 <table border="0" cellpadding="4" width="95%">
 <tr bgcolor="#b0d0ff">
  <th align="left">
- <a name=Mauve>Mauve
+ <a name=Mauve>Mauve</a>
  </th>
 </tr>
 </table>
