--- a/htdocs/libstdc++/index.html
+++ b/htdocs/libstdc++/index.html
@@ -3,7 +3,7 @@
  <META NAME="KEYWORDS" CONTENT="libstdc++, homepage, home, g++, libg++, STL">
  <TITLE>Standard C++ Library v3</TITLE>
 <LINK REL=StyleSheet HREF="lib3styles.css">
-<!-- $Id: index.html,v 1.11 2001/04/13 04:50:18 pme Exp $ -->
+<!-- $Id: index.html,v 1.12 2001/06/25 20:12:35 pme Exp $ -->
 </HEAD>
 <BODY>
 
@@ -25,7 +25,7 @@
 
 <H2>What... is the airspeed velocity of an unladen swallow?</H2>
 
-<P><A HREF="http://www.stone-dead.asn.au/movies/holy-grail/scene-23.html">African or European?</A></P>
+<P><A HREF="http://www.stone-dead.asn.au/movies/holy-grail/grail-23.htm">African or European?</A></P>
 <!-- Anyone who hasn't seen Holy Grail shouldn't be programming... how can you
      understand procedural logic if you haven't seen the witch-burning scene?
      (Replace 'scene-23' with 'scene-05' for the transcript.)
