--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -35,6 +35,11 @@
 </tr>
 
 <tr>
+<td>hppa2.0w-hp-hpux11.00</td>
+<td>Successful</td>
+</tr>
+
+<tr>
 <td>i386-pc-sco3.2v5.0.4</td>
 <td>Successful</td>
 </tr>
