--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -80,6 +80,11 @@
 </tr>
 
 <tr>
+<td>powerpc-ibm-aix4.3.2.0</td>
+<td>Successful</td>
+</tr>
+
+<tr>
 <td>powerpc-unknown-linux-gnu</td>
 <td>Successful</td>
 </tr>
