Make it clearer that we want reports going to the GCC GNATS database, not the GNATS GNATS database.

--- a/htdocs/bugs.html
+++ b/htdocs/bugs.html
@@ -48,8 +48,8 @@ http://gcc.gnu.org/bugs.html</a>.</p>
 
 <h1><a name="report">Reporting Bugs</a></h1>
 
-<p>Our preferred way of receiving bugs is via our 
-<a href="gnats.html">GNATS bug reporting system</a>.</p>
+<p>Our preferred way of receiving bugs is via the
+<a href="gnats.html">GCC GNATS bug reporting system</a>.</p>
 
 <p>Before you report a bug, please check the 
 <a href="#known">list of well-known bugs</a> and, <strong>if possible
@@ -139,8 +139,8 @@ Please include in your bug report <b>all</b> of the following items:
 
 <h3><a name="where">Where to post it</a></h3>
 
-<p>Please submit your bug report directly to our
-<a href="gnats.html">GNATS</a> bug database. If this is not possible,
+<p>Please submit your bug report directly to the
+<a href="gnats.html">GCC GNATS bug database</a>. If this is not possible,
 please mail all information to
 <a href="mailto:gcc-bugs@gcc.gnu.org">gcc-bugs@gcc.gnu.org</a>.
 
@@ -193,7 +193,8 @@ duplicated as part of an archive.</p>
 
 <p>The gcc lists have message size limits (200 kbytes) and bug reports
 over those limits will currently be bounced.  If your bug is larger
-than that, please post it directly in GNATS.</p>
+than that, please post it using the <a href="gnats.html">GCC GNATS bug
+database</a>.</p>
 
 <p>If you fail to supply enough information for a bug report to be
 reproduced, someone will probably ask you to post additional
