Remove link to the GNATS site from the top of the page.

--- a/htdocs/gnats.html
+++ b/htdocs/gnats.html
@@ -7,7 +7,7 @@
 <body>
 <h1 align="center">gccbug and gnatsweb</h1>
 
-<p><a href="http://sources.redhat.com/gnats/">GNATS</a> is the GNU
+<p>GNATS is the GNU
 bug tracking system, and it is now used to track GCC bug reports, as
 well. Before submitting a bug report, please read the <a
 href="bugs.html">general instructions</a>.</p>
