--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -90,6 +90,11 @@
 </tr>
 
 <tr>
+<td>sparc-sun-solaris2.5.1</td>
+<td>Successful</td>
+</tr>
+
+<tr>
 <td>sparc-sun-solaris2.7</td>
 <td>Successful</td>
 </tr>
